--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Adding config.py file.
+config.py
+
+# Adding additional files.
+API_practice.ipynb
+random_numbers.ipynb
+API_practice--old.ipynb
+WeatherPy--old.ipynb
+Untitled.ipynb
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
